--- a/hw03.ipynb
+++ b/hw03.ipynb
@@ -1,11 +1,110 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ebcaa6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import kagglehub\n",
+    "\n",
+    "DATA_DIR = \"data\"\n",
+    "\n",
+    "os.makedirs(DATA_DIR, exist_ok=True)\n",
+    "\n",
+    "print(\"Downloading Intel Image Classification dataset...\")\n",
+    "path = kagglehub.dataset_download(\"puneet6060/intel-image-classification\")\n",
+    "\n",
+    "print(\"Dataset downloaded to:\", path)\n",
+    "\n",
+    "for folder in [\"seg_train\", \"seg_test\", \"seg_pred\"]:\n",
+    "    src = os.path.join(path, folder)\n",
+    "    dst = os.path.join(DATA_DIR, folder)\n",
+    "    if not os.path.exists(dst) and os.path.exists(src):\n",
+    "        os.rename(src, dst)\n",
+    "\n",
+    "print(\"\\nDirectory contents:\")\n",
+    "for root, dirs, files in os.walk(DATA_DIR):\n",
+    "    level = root.replace(DATA_DIR, \"\").count(os.sep)\n",
+    "    indent = \" \" * 2 * level\n",
+    "    print(f\"{indent}{os.path.basename(root)}/\")\n",
+    "    for f in files[:3]:\n",
+    "        print(f\"{indent}  {f}\")\n",
+    "    if level > 1:\n",
+    "        break"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "40267ae0",
    "metadata": {},
    "source": [
     "# Problem 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e2b10db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes: ['seg_train']\n",
+      "Train subset: 12631 | Val subset: 1403 | Test set: 3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from torchvision import datasets, transforms\n",
+    "from torch.utils.data import DataLoader, random_split\n",
+    "\n",
+    "base_dir = os.path.join(os.getcwd(), \"data\")\n",
+    "train_dir = os.path.join(base_dir, \"seg_train\")\n",
+    "test_dir  = os.path.join(base_dir, \"seg_test\")\n",
+    "\n",
+    "IMG_SIZE = 150\n",
+    "BATCH_SIZE = 32\n",
+    "\n",
+    "train_transform = transforms.Compose([\n",
+    "    transforms.Resize((IMG_SIZE, IMG_SIZE)),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomRotation(10),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                         std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "val_transform = transforms.Compose([\n",
+    "    transforms.Resize((IMG_SIZE, IMG_SIZE)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                         std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "test_transform = val_transform\n",
+    "\n",
+    "train_data_full = datasets.ImageFolder(root=train_dir, transform=train_transform)\n",
+    "val_data_full   = datasets.ImageFolder(root=train_dir, transform=val_transform)\n",
+    "test_data       = datasets.ImageFolder(root=test_dir,  transform=test_transform)\n",
+    "\n",
+    "val_size = int(0.1 * len(train_data_full))\n",
+    "train_size = len(train_data_full) - val_size\n",
+    "\n",
+    "train_subset, _ = random_split(train_data_full, [train_size, val_size])\n",
+    "_, val_subset   = random_split(val_data_full, [train_size, val_size])\n",
+    "\n",
+    "train_loader = DataLoader(train_subset, batch_size=BATCH_SIZE, shuffle=True, num_workers=2)\n",
+    "val_loader   = DataLoader(val_subset,   batch_size=BATCH_SIZE, shuffle=False, num_workers=2)\n",
+    "test_loader  = DataLoader(test_data,    batch_size=BATCH_SIZE, shuffle=False, num_workers=2)\n",
+    "\n",
+    "print(\"Classes:\", train_data_full.classes)\n",
+    "print(f\"Train subset: {len(train_subset)} | Val subset: {len(val_subset)} | Test set: {len(test_data)}\")"
    ]
   },
   {
@@ -18,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6be1c9c4",
    "metadata": {},
    "outputs": [],
@@ -58,11 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e2e42b25",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Using device:\", device)\n",
+    "\n",
     "def train_model(config, train_loader, val_loader, num_epochs=10):\n",
     "    print(f\"\\n=== Training: {config['name']} ===\")\n",
     "\n",
@@ -1025,7 +1133,7 @@
     "        y_pred.extend(preds.cpu().numpy())\n",
     "\n",
     "cm = confusion_matrix(y_true, y_pred)\n",
-    "ConfusionMatrixDisplay(cm, display_labels=test_dataset.classes).plot(\n",
+    "ConfusionMatrixDisplay(cm, display_labels=test_data.classes).plot(\n",
     "    cmap=\"Blues\", xticks_rotation=45\n",
     ")\n",
     "plt.title(f\"Confusion Matrix — {best_name}\")\n",
@@ -1034,7 +1142,7 @@
     "\n",
     "y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
     "print(\"\\nPer-class accuracy:\")\n",
-    "for i, cls in enumerate(test_dataset.classes):\n",
+    "for i, cls in enumerate(test_data.classes):\n",
     "    mask = (y_true == i)\n",
     "    acc = (y_pred[mask] == y_true[mask]).mean()\n",
     "    print(f\"{cls:10s}: {acc*100:.2f}%\")"
